[gd_scene load_steps=3 format=3 uid="uid://ggow5ddllgga"]

[ext_resource type="Texture2D" uid="uid://8u5vthp8lu5e" path="res://Assets/PLaceholder/titlemockup.png" id="1_gl3g7"]
[ext_resource type="Script" path="res://Scenes/Menus/Main Menu/main_menu.gd" id="1_hgnt5"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hgnt5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("1_gl3g7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Control" parent="Control/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/Container"]
layout_mode = 2
offset_left = 433.0
offset_top = 157.0
offset_right = 510.0
offset_bottom = 341.0
rotation = 0.471239
size_flags_horizontal = 10
size_flags_vertical = 8
theme_override_constants/separation = 59
alignment = 2

[node name="Control" type="Control" parent="Control/MarginContainer/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="New game" type="Button" parent="Control/MarginContainer/Container/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.471239
text = "New game"

[node name="Control2" type="Control" parent="Control/MarginContainer/Container/VBoxContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="Control/MarginContainer/Container/VBoxContainer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.471239
text = "Continue"

[node name="Control3" type="Control" parent="Control/MarginContainer/Container/VBoxContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="Control/MarginContainer/Container/VBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.471239
text = "Settings"

[node name="Control4" type="Control" parent="Control/MarginContainer/Container/VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="Control/MarginContainer/Container/VBoxContainer/Control4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.471239
text = "Exit"

[connection signal="pressed" from="Control/MarginContainer/Container/VBoxContainer/Control/New game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Container/VBoxContainer/Control2/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Container/VBoxContainer/Control3/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/MarginContainer/Container/VBoxContainer/Control4/Exit" to="." method="_on_exit_pressed"]
